# Hackaton-Alfa

./: .gitignore  1.py  analiz.ipynb  analys.ipynb  correlations_analysis.csv  impute_test_dataset  missing_values_analysis.csv  pyproject.toml  random_forest_analisys  random_forest_train_test
.ipynb_checkpoints/: model_income_start-checkpoint.ipynb
backend/: Dockerfile  docker-compose.yml  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/handlers/: analytics_handler.go  client_handler.go  health_handler.go  prediction_handler.go  router_handler.go
backend/internal/models/: client.go  prediction.go  requests.go
backend/pkg/database/: postgres.go
frontend/: .gitignore  package-lock.json
frontend/app/: globals.css  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/client/[id]/: page.tsx
frontend/app/clients/: page.tsx
frontend/components/: curved-lines.tsx  income-prediction-widget.tsx  product-recommendations.tsx  shap-explainer.tsx  stats-card.tsx
frontend/lib/: api.ts
