[project]
name = "hackaton-alfa"
version = "0.1.0"
description = ""
authors = [
    {name = "vooterr",email = "zigl.zigl535@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "cupy-cuda11x (>=13.6.0,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
